--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,7 +2,6 @@
         background-image: url('../img/gquran.jpg');
         margin: 0 auto;
         text-align: center;
-        font-size: 2em;
         width: 100%;
         padding-top: 25px;
         padding-bottom: 25px;
@@ -26,6 +25,7 @@
         text-decoration: none;
         text-shadow: 3px 3px 1px rgb(0, 0, 0);
         color: rgba(255, 255, 255, 0.801);
+        font-size: xx-large;
     }
     
     #div2 #toggle {
@@ -155,6 +155,9 @@
     #div1 a:hover {
         color: rgb(255, 255, 255) !important;
         text-decoration: none;
+    }
+    a:link,a:visited,a:active{
+        color: inherit;
     }
     
     #div3a {
