--- a/public/css/home.css
+++ b/public/css/home.css
@@ -181,7 +181,7 @@
         text-align: left;
         line-break: auto;
         background-color: rgb(55, 126, 70);
-        width: 800px;
+        width: 80vw;
         font-family: 'Alegreya', serif;
         color: rgb(0, 0, 0);
         padding-left: 2vw;
