--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,6 @@
         margin: 0 auto;
         text-align: center;
         width: 100%;
-        padding-top: 25px;
         padding-bottom: 25px;
         border: 0;
         margin-bottom: 0px;
@@ -31,81 +30,80 @@
     #div2 #toggle {
         background-color: rgb(206, 201, 201);
         border: 0;
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: 2vh;
+        padding-top: 2vh;
         width: 20vw;
         display: block;
-        font-size: 2.5em;
         font-family: 'Alegreya', serif;
         margin: 0;
         float: left;
         color: darkred;
+        font-size: larger;
     }
     
     #div2 #buletin {
         background-color: rgb(206, 201, 201);
         border: 0;
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: 2vh;
+        padding-top: 2vh;
         width: 20vw;
         display: block;
-        font-size: 2.5em;
         font-family: 'Alegreya', serif;
         margin: 0;
         cursor: pointer;
         float: left;
         color: darkred;
+        font-size: larger;
     }
     
     #div2 #video {
         background-color: rgb(206, 201, 201);
         border: 0;
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: 2vh;
+        padding-top: 2vh;
         width: 20vw;
         display: block;
-        font-size: 2.5em;
         font-family: 'Alegreya', serif;
         margin: 0;
         cursor: pointer;
         float: left;
+        font-size: larger;
         color: darkred;
     }
     
     #div2 #exkul {
         background-color: rgb(206, 201, 201);
         border: 0;
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: 2vh;
+        padding-top: 2vh;
         width: 20vw;
         display: block;
-        font-size: 2.5em;
         font-family: 'Alegreya', serif;
         margin: 0;
         cursor: pointer;
         color: darkred;
+        font-size: larger;
     }
     
     #div2 #dokumentasi {
         background-color: rgb(206, 201, 201);
         border: 0;
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: 2vh;
+        padding-top: 2vh;
         width: 20vw;
         display: block;
-        font-size: 2.5em;
         font-family: 'Alegreya', serif;
         margin: 0;
         cursor: pointer;
         float: left;
         color: darkred;
+        font-size: larger;
     }
     
     #div2 {
         margin: 0 auto;
         text-align: center;
         cursor: pointer;
-        display: block;
         font-family: 'Alegreya', serif;
         margin: 0;
         border-bottom: #158f2e 15px solid;
@@ -192,16 +190,15 @@
     .content p {
         text-align: left;
         margin: 0;
-        font-size: 1.8em;
+        font-size: 1em;
     }
     
     .content a {
-        font-size: 1.8em;
+        font-size: 1em;
     }
     
     .content h2 {
         text-align: center;
-        font-size: 2.5em;
         color: rgb(255, 255, 255);
     }
     
@@ -321,112 +318,6 @@
         }
         100% {
             opacity: 1;
-        }
-    }
-    
-    @-webkit-keyframes bounce-in-top {
-        0% {
-            -webkit-transform: translateY(-500px);
-            transform: translateY(-500px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-            opacity: 0;
-        }
-        38% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-            opacity: 1;
-        }
-        55% {
-            -webkit-transform: translateY(-65px);
-            transform: translateY(-65px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        72% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-        }
-        81% {
-            -webkit-transform: translateY(-28px);
-            transform: translateY(-28px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        90% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-        }
-        95% {
-            -webkit-transform: translateY(-8px);
-            transform: translateY(-8px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        100% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-        }
-    }
-    
-    @keyframes bounce-in-top {
-        0% {
-            -webkit-transform: translateY(-500px);
-            transform: translateY(-500px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-            opacity: 0;
-        }
-        38% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-            opacity: 1;
-        }
-        55% {
-            -webkit-transform: translateY(-65px);
-            transform: translateY(-65px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        72% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-        }
-        81% {
-            -webkit-transform: translateY(-28px);
-            transform: translateY(-28px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        90% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-        }
-        95% {
-            -webkit-transform: translateY(-8px);
-            transform: translateY(-8px);
-            -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-        }
-        100% {
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-            -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
         }
     }
     
